--- a/libraries/chorus/scss/chorus.framework.scss
+++ b/libraries/chorus/scss/chorus.framework.scss
@@ -1,5 +1,13 @@
+* {
+  font-family: $font-lato;
+  font-weight:$font-weight-medium;
+}
 .fret {
   display: inline-block;
+  letter-spacing: -0.1em;
+  padding: 10px;
+  width: 30px;
+  @include unselectable;
   &.fret-selected{
     color:green;
   }
