--- a/libraries/chorus/scss/chorus.framework.scss
+++ b/libraries/chorus/scss/chorus.framework.scss
@@ -7,6 +7,7 @@
   letter-spacing: -0.1em;
   padding: 10px;
   width: 30px;
+  text-align: center;
   @include unselectable;
   &.fret-selected{
     color:green;
