--- a/src/scss/chorus.fonts.scss
+++ b/src/scss/chorus.fonts.scss
@@ -1,6 +1,6 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700,900);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic);
 
-$font-lato: 'Lato', sans-serif;
+$font-open-sans-condensed: 'Open Sans Condensed', "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
 
 $font-weight-light: 300;
 $font-weight-medium: 400;
