--- a/src/scss/chorus.framework.scss
+++ b/src/scss/chorus.framework.scss
@@ -1,21 +1,26 @@
-* {
-  font-family: $font-lato;
-  font-weight:$font-weight-medium;
-}
-.string {
-  min-width: 1300px;
-}
-.fret {
-  display: inline-block;
-  letter-spacing: -0.1em;
-  padding: 10px;
-  width: 80px;
-  text-align: center;
-  @include unselectable;
-  &.fret-selected{
-    color:green;
+$display-width: 1300;
+
+.chorus_instrument {
+  * {
+    font-family: $font-open-sans-condensed;
+    font-weight:$font-weight-medium;
   }
-  &.fret-root{
-    color:red;
+  .string {
+    min-width: $display-width+px;
+    .fret {
+      display: inline-block;
+      letter-spacing: -0.1em;
+      padding: 10px;
+      width: 80px;
+      text-align: center;
+      cursor:pointer;
+      @include unselectable;
+      &.fret-selected{
+        color:green;
+      }
+      &.fret-root{
+        color:red;
+      }
+    }
   }
 }
