--- a/src/scss/chorus.scss
+++ b/src/scss/chorus.scss
@@ -1,3 +1,5 @@
+@import "chorus.normalize";
+@import "chorus.prefixer";
 @import "chorus.fonts";
 @import "chorus.mixins";
 @import "chorus.framework";
