--- a/src/scss/chorus.framework.scss
+++ b/src/scss/chorus.framework.scss
@@ -9,7 +9,7 @@ $display-width: 1300;
     min-width: $display-width+px;
     .fret {
       display: inline-block;
-      letter-spacing: -0.1em;
+      font-size: 16px;
       padding: 10px;
       width: 80px;
       text-align: center;
