--- a/src/scss/chorus.framework.scss
+++ b/src/scss/chorus.framework.scss
@@ -15,12 +15,29 @@ $display-width: 1300;
       text-align: center;
       cursor:pointer;
       @include unselectable;
-      &.chorus-fret-selected{
-        color:green;
-      }
-      &.chorus-fret-root{
-        color:red;
-      }
     }
+  }
+  .chorus-piano-key {
+    display: inline-block;
+    font-size: 16px;
+    padding: 10px;
+    width: 80px;
+    text-align: center;
+    cursor:pointer;
+    @include unselectable;
+    &.white {
+      color: black;
+      background: white;
+    }
+    &.black {
+      color:white;
+      background:black;
+    }
+  }
+  .chorus-note-selected{
+    color:green!important;
+  }
+  .chorus-note-root{
+    color:red!important;
   }
 }
