--- a/src/scss/chorus.scss
+++ b/src/scss/chorus.scss
@@ -1,5 +1,6 @@
 @import "chorus.normalize";
 @import "chorus.prefixer";
+@import "chorus.colors";
 @import "chorus.fonts";
 @import "chorus.mixins";
 @import "chorus.framework";
