finished multicolor option; added comments to sass

--- a/src/scss/chorus.colors.scss
+++ b/src/scss/chorus.colors.scss
@@ -1,3 +1,5 @@
+//core
+//-----------------------------
 $color-jays-dark-blue: #041E42;
 $color-jays-light-blue: #003DA5;
 $color-badgers-red: #B70101;
@@ -15,3 +17,19 @@ $color-desert-black: #333333;
 $color-red: #FF0000;
 $color-orange: #FFA500;
 $color-yellow: #FFFF00;
+
+
+//notes
+//-----------------------------
+$color-note-0: pink;
+$color-note-1: mintcream;
+$color-note-2: purple;
+$color-note-3: teal;
+$color-note-4: yellow;
+$color-note-5: greenyellow;
+$color-note-6: navy;
+$color-note-7: fuchsia;
+$color-note-8: orange;
+$color-note-9: green;
+$color-note-10: blueviolet;
+$color-note-11: orangered;
