--- a/src/scss/chorus.fonts.scss
+++ b/src/scss/chorus.fonts.scss
@@ -1,3 +1,5 @@
+//core
+//-----------------------------
 @import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic);
 
 $font-open-sans-condensed: 'Open Sans Condensed', "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
