--- a/src/scss/chorus.colors.scss
+++ b/src/scss/chorus.colors.scss
@@ -22,14 +22,14 @@ $color-yellow: #FFFF00;
 //notes
 //-----------------------------
 $color-note-0: pink;
-$color-note-1: mintcream;
-$color-note-2: purple;
-$color-note-3: teal;
-$color-note-4: yellow;
-$color-note-5: greenyellow;
-$color-note-6: navy;
-$color-note-7: fuchsia;
-$color-note-8: orange;
-$color-note-9: green;
-$color-note-10: blueviolet;
-$color-note-11: orangered;
+$color-note-1: orangered;
+$color-note-2: orange;
+$color-note-3: yellow;
+$color-note-4: greenyellow;
+$color-note-5: lightgreen;
+$color-note-6: green;
+$color-note-7: lightblue;
+$color-note-8: teal;
+$color-note-9: blueviolet;
+$color-note-10: mediumpurple;
+$color-note-11: fuchsia;
