--- a/src/hbs/piano.hbs
+++ b/src/hbs/piano.hbs
@@ -1,7 +1,9 @@
 <div id="{{containerId}}" class="{{containerClass}}" {{domDataConfigKey}}="{{domDataConfigValue}}">
+<!--title-->
 {{#if layoutInstrumentTitles}}
     <{{layoutInstrumentTitles.htmlElement}} class="{{layoutInstrumentTitles.htmlElementClass}}">piano</{{layoutInstrumentTitles.htmlElement}}>
 {{/if}}
+<!--piano keys-->
 <div class="{{pianoClass}}">
     {{#each keys}}
             <div class="{{../pianoKeyClass}} {{../noteClass}} {{multicolorClass}} {{keyClass}}" {{../domDataToneKey}}="{{tone}}">
@@ -11,6 +13,7 @@
         </div>
     {{/each}}
 </div>
+<!--search button-->
 {{#if searchButton}}
     <a class="{{searchButton.elementClass}}" onclick="_chorus.search('','{{containerId}}',{{searchButton.callback}})">{{searchButton.title}}</a>
 {{/if}}
