logic - bug fix for piano note searches

--- a/src/hbs/piano.hbs
+++ b/src/hbs/piano.hbs
@@ -1,4 +1,4 @@
-<div id="{{containerId}}" class="{{containerClass}}" {{domDataConfigKey}}="{{domDataConfigValue}}">
+<div id="{{containerId}}" class="piano {{containerClass}}" {{domDataConfigKey}}="{{domDataConfigValue}}">
 <!--title-->
 {{#if layoutInstrumentTitles}}
     <{{layoutInstrumentTitles.htmlElement}} class="{{layoutInstrumentTitles.htmlElementClass}}">piano</{{layoutInstrumentTitles.htmlElement}}>
