--- a/src/scss/chorus.framework.scss
+++ b/src/scss/chorus.framework.scss
@@ -8,7 +8,7 @@ $display-width: 1250;
   text-transform: capitalize;
 }
 
-.chorus-search-button {
+.chorus-button {
   display: inline-block;
   margin: 10px 0;
   padding: 10px;
