--- a/src/scss/chorus.framework.scss
+++ b/src/scss/chorus.framework.scss
@@ -35,7 +35,7 @@ $display-width: 1250;
   position: relative;
 }
 
-.results-container {
+.chorus-results-container {
   max-height: 250px;
   max-width: 100%;
   overflow-y: scroll;
@@ -57,7 +57,7 @@ $display-width: 1250;
     &:hover, &.chorus-result-item-selected {
       background-color: black;
       span {
-        color: white;
+        color: $color-white
       }
     }
   }
@@ -133,7 +133,7 @@ $display-width: 1250;
         z-index: -1;
       }
       span {
-        background-color: white;
+        background-color: $color-white;
         /* to hide the lines from behind the text, you have to set the background color the same as the container */
         padding: 0 5px;
       }
@@ -158,7 +158,7 @@ $display-width: 1250;
 }
 
 .chorus-piano-key {
-  $whiteKeyWidth: 14.15;
+  $whiteKeyWidth: 100/7;
   $blackKeyWidth: $whiteKeyWidth*0.6;
   display: inline-block;
   font-size: 16px;
@@ -174,7 +174,7 @@ $display-width: 1250;
     border-top: 1px solid black;
     border-bottom: 1px solid black;
     border-right: 1px solid black;
-    width: unquote((100/7)+'%');
+    width: unquote($whiteKeyWidth+'%');
     vertical-align: bottom;
     float: left;
     &:first-child {
@@ -189,7 +189,7 @@ $display-width: 1250;
     width: unquote($blackKeyWidth+'%');
     background: black;
     span {
-      color: white;
+      color: $color-white
     }
     z-index: 10;
     &[data-chorus-tone="4"] {
@@ -239,7 +239,7 @@ $display-width: 1250;
 
 .chorus-note-found {
   span {
-    background-color: $color-badgers-gold!important;
+    background-color: $color-gold !important;
   }
 
   &:not(.chorus-note-selected):not(.chorus-note-root) {
@@ -331,14 +331,14 @@ $display-width: 1250;
 
 .chorus-note-selected {
   span {
-    color: white;
-    background-color: $color-jays-light-blue!important;
+    color: $color-white;
+    background-color: $color-light-blue !important;
   }
 }
 
 .chorus-note-root{
   span {
-    color: white;
-    background-color: $color-badgers-red!important;
+    color: $color-white;
+    background-color: $color-red !important;
   }
 }
